# Quiz-Generator

Game v1.0/: Game v1.0.cbp  Game v1.0.layout  main.cpp
Game v2.0/: CMakeLists.txt  Game v2.0.cbp  Game v2.0.depend  Game v2.0.layout  main.cpp
Game v2.0/include/: Admin.h  Complete.h  MCQ.h  Player.h  Question.h  Quiz.h  Statistics.h  TF.h  User.h
Game v2.0/src/: Admin.cpp  Complete.cpp  MCQ.cpp  Player.cpp  Question.cpp  Quiz.cpp  Statistics.cpp  TF.cpp  User.cpp
